# 프로젝트 설정 파일
# 이 파일은 관리(management) 모듈의 의존성과 메타데이터를 정의합니다.
# Python 패키지 관리 도구(uv)가 이 파일을 사용하여 필요한 패키지를 설치합니다.
# 이 패키지에 종속성을 추가하시려면 `uv add --project agents/management <<package_name>>`를 사용합니다.

[project]
name = "management"
version = "0.1.0"
description = "엔터테인먼트 컨텐츠 관리를 위한 LangGraph Workflow 모듈"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "newsapi-python>=0.2.6"
]
