[project]
name = "comfyui-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "av>=14.2.0",
    "comfyui-frontend-package==1.18.9",
    "comfyui-workflow-templates==0.1.11",
    "diffusers>=0.26.3",
    "dill>=0.4.0",
    "einops>=0.8.1",
    "insightface>=0.7.3",
    "kornia>=0.7.1",
    "matplotlib>=3.10.3",
    "mcp>=1.8.0",
    "numpy>=1.25.0",
    "onnxruntime>=1.17.1",
    "opencv-python>=4.9.0.80",
    "opencv-python-headless>=4.11.0.86",
    "piexif>=1.1.3",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "pydantic~=2.0",
    "pytest>=7.8.0",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=0.26.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "safetensors>=0.4.2",
    "scikit-image>=0.25.2",
    "scipy>=1.11.4",
    "segment-anything>=1.0",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1",
    "spandrel>=0.4.1",
    "tokenizers>=0.13.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchsde>=0.2.6",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.28.1",
    "ultralytics>=8.3.130",
    "websockets>=15.0.1",
    "yarl>=1.18.0",
]
