[project]
name = "ComfyUI"
version = "0.3.33"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.8",
    "av>=14.2.0",
    "comfyui-frontend-package==1.18.9",
    "comfyui-workflow-templates==0.1.11",
    "diffusers>=0.26.3",
    "dill>=0.4.0",
    "einops>=0.8.1",
    "insightface>=0.7.3",
    "kornia>=0.7.1",
    "matplotlib>=3.9.4",
    "numpy>=1.25.0",
    "onnxruntime>=1.17.1",
    "opencv-python>=4.9.0.80",
    "opencv-python-headless>=4.11.0.86",
    "piexif>=1.1.3",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "pydantic~=2.0",
    "pytest>=7.8.0",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=0.26.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.4.2",
    "scikit-image>=0.24.0",
    "scipy>=1.11.4",
    "segment-anything>=1.0",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1",
    "spandrel>=0.4.1",
    "tokenizers>=0.13.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchsde>=0.2.6",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.28.1",
    "ultralytics>=8.3.131",
    "yarl>=1.18.0",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb"]
